product display,slugfields

--- a/products/templates/products/featured_detail.html
+++ b/products/templates/products/featured_detail.html
@@ -3,6 +3,6 @@
 {{ object.title }}<br/>
 {{ object.description }}<br/>
 {{ object.price }}<br/>
-{% if oject.image %}
+{% if object.image %}
 <img src ="{{object.image.url}}" class="img-fluid"/>
 {%endif%}
