--- a/products/templates/products/list.html
+++ b/products/templates/products/list.html
@@ -1,5 +1,11 @@
  
- {%for object in object_list%}
- {{ object.title}}<br/>
+ <div class="container">
+    <div class='row'>
+        {%for object in object_list%}
+        <div class='col'>
+        {%include 'products/snippets/card.html' with instance=object%}
+        </div>
+        {%endfor%}
+    </div>
+ </div>
  
- {%endfor%}
