--- a/products/templates/products/list.html
+++ b/products/templates/products/list.html
@@ -1,4 +1,6 @@
  
+ {% extends 'registration/eshop.html'%}
+ {%block content%}
  <div class="container">
     <div class='row'>
         {%for object in object_list%}
@@ -7,5 +9,6 @@
         </div>
         {%endfor%}
     </div>
+{%endblock%}
  </div>
  
