--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    
-    <meta charset = 'utf-8'>
-    <title>
-        Products
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit="no">
 
-    <link rel = "stylesheet" href = "">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</head>
-<body>
+    {%extends 'registration/eshop.html'%}
     {%load staticfiles%}
+    {%block content%}
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>{{ object.title }}<br/></h1>>
-                {{object.timestamp|timesince }}
+                <a class="badge badge-info"><h1>{{ object.title }}</h1></a></br>
+                </br>
+                 {{object.timestamp|timesince }}
+                </br>
+            </br>
+                <span class="badge badge-pill badge-warning"><h2>${{ object.price }}</h2></span></br>
+                <img src ="{{object.image.url}}" class="img-fluid"/>                
                 {{ object.description|linebreaks }}<br/>
-                {{ object.price }}<br/>
-                <img src ="{{object.image.url}}" class="img-fluid"/>
+                
             </div>
         </div>
     </div>
-    
-</body>
-</html>
+    {%endblock%}
+
