--- a/registration/templates/registration/register.html
+++ b/registration/templates/registration/register.html
@@ -1,79 +1,29 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset = 'utf-8'>
-    <title>
-      e-Shop
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{%extends 'registration/eshop.html'%}
 
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</head>
-<body>
-
-  <div class="container">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        
-                <a class="navbar-brand" href="#"><img src="registration/static/images/logo1.jpg" width="30" height="30" class="d-inline-block align-top" alt="">  e~Shop</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
-                  <form class="form-inline my-2 my-lg-0">
-                      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-        
-                    
-                    <li class="nav-item active">
-                        <a class="nav-link" id='sign' href="#">Signin & Signup <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" id = 'cart' href="#"><img src="registration/static/images/cart1.jpg" width="30" height="30" class="d-inline-block align-top" alt=""> Cart <span class="sr-only">(current)</span></a>
-                    </li>
-                  </ul>
-                  
-                </div>
-              </nav>
-  </div>
-    
-      
-      
-      <div class= "container">
-         <!-- <div class = "jumbotron jombotron-fluid"> -->
-            <nav class="navbar navbar-expand-md navbar-light bg-light">
-            </nav>
-            <nav class="navbar navbar-expand-md navbar-dark bg-dark" >
-              {% if registered %}
-              <br>
-              <h1 style="color:yellow;">Thank you for registering!</h1>
-              {% else %}
-              <span class="navbar-brand mb-0 h1" ><h1>Sign-up</h1></span>
-            </nav>
-            <br>
-            <form method = "POST">
-            
-            {%csrf_token%}
-            {{user_form.as_p}}
-            {{profile_form.as_p}}
-            
-            <input type="submit" class= "btn btn-primary" value="Signup">
-            </form>
-            {%endif%}
-       <!-- </div> -->
-        
-      </div>
-
-  
-
-
-
+{%block content%}
+<div class= "container">
+  <!-- <div class = "jumbotron jombotron-fluid"> -->
+     <nav class="navbar navbar-expand-md navbar-light bg-light">
+     </nav>
+     <nav class="navbar navbar-expand-md navbar-light bg-light" >
+       {% if registered %}
+       <br>
+       <h1 style="color:yellow;">Thank you for registering!</h1>
+       {% else %}
+       <span class="navbar-brand mb-0 h1" ><h1>Signup</h1></span>
+     </nav>
+     <br>
+     <form method = "POST">
+     
+     {%csrf_token%}
+     {{user_form.as_p}}
+     {{profile_form.as_p}}
+     
+     <input type="submit" class= "btn btn-primary" value="Signup">
+     </form>
+     {%endif%}
+</div>
+{%endblock%}
       
 
-</body>
-</html>
+
