added stripe payment method with django

--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -11,6 +11,16 @@
                 </br>
             </br>
                 <span class="badge badge-pill badge-warning"><h2>${{ object.price }}</h2></span></br>
+                <form action="{% url 'charge' %}" method="post">
+                    {% csrf_token %}
+                    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                        data-key="{{ key }}"
+                        data-description="A Django Charge"
+                        data-amount="{{ object.price }}"
+                        data-locale="auto">
+                    </script>
+                </form>                    
+                <br/>
                 <img src ="{{object.image.url}}" class="img-fluid"/>                
                 {{ object.description|linebreaks }}<br/>
                 
