--- a/registration/templates/registration/eshop.html
+++ b/registration/templates/registration/eshop.html
@@ -16,7 +16,7 @@
 <body>
     {%block body_block%}
 
-    
+      <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         
             <a class="navbar-brand" href="{% url 'products:list'%}">eshop</a>
@@ -56,7 +56,7 @@
               
             </div>
           </nav>
-        
+        </div>
            {%endblock%}
            {%block content%}
            {%endblock%}
