--- a/products/templates/products/snippets/card.html
+++ b/products/templates/products/snippets/card.html
@@ -24,7 +24,7 @@
         <h5 class="card-title">{{instance.title}}</h5>
         <p class="card-text">{{instance.description|linebreaks|truncatewords:15}}</p>
         <a href="{{instance.get_absolute_url}}" class="btn btn-primary">View</a>
-        <a class="btn btn-warning"><h1>$</h1>{{instance.price}}</a>
+        <a class="btn btn-warning"><h1>Rs.</h1>{{instance.price}}</a>
         </div>
       </div>
 </body>
